--- a/src/Components/GameLevelSelector.css
+++ b/src/Components/GameLevelSelector.css
@@ -1,21 +1,22 @@
-.level-selector-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .level-selector {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 8px;
-    font-size: 16px;
-    outline: none;
-  }
-  
-  .level-selector:hover {
-    cursor: pointer;
-  }
-  
-  .level-selector:focus {
-    border-color: #007bff;
-  }
+.level-selector{
+  margin-top: 5px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+label{
+  font-size: 22px;
+  margin-right: 10px;
+  font-family: monospace;
+}
+
+select{
+  font-size: 18px;
+  padding: 2.5px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  font-family: monospace;
+}
